# CorAI

./: LICENSE  Package.md  README.md  Requirements.md  Tutorial_colab.md  class_estimator.py  class_graph.py  classical_functions.py  decorators_functions.py  financial_functions.py  functions_networkx.py  generic_functions.py  metaclass_register.py  plot_functions.py  recurrent_functions.py  requirements.txt  setup.cfg  setup.py  test_plot.py  todo.md  tutorial_colab.md  useful_functions.py
classes/: class_estimator.py  class_evolution_plot_estimator.py  class_graph_estimator.py  class_histogram_estimator.py  class_root_graph.py  class_statistic_plot_estimator.py
corai/: hp_opti_fct.py  hyper_param_rc_tune.py  tutorial_training.md
corai_util/: __init__.py
docs/: README.md  how_to_use_a_venv.md  how_to_use_estimators_and_plotters.md  list_ml_lib_tutorials.md  tutorial_colab.md  tutorial_hyperparam_selection.md  tutorial_pytorch_lightning.md  tutorial_training.md
errors/: Error_type_setter.py  Warning_deprecated.py  error_convergence.py
library_errors/: Error_convergence.py  Error_forbidden.py  Error_not_allowed_input.py  Error_not_enough_information.py  Error_not_yet_allowed.py  Error_type_setter.py  Warning_deprecated.py  error_convergence.py
library_metaclasses/: metaclass_register.py
metaclasses/: metaclass_register.py
priv_lib_error/: __init__.py  warning_deprecated.py
priv_lib_estimator/: __init__.py  how_to_use_estimators_and_plotters.MD  how_to_use_estimators_and_plotters.md  requirements.txt
priv_lib_metaclass/: requirements.txt
(+1297 files in other folders)
